5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2499.log
== TEST (2019-05-11 22:06:59) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x == 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round, 8)
	
-- OUTPUT:
<built-in function round> 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:07:25) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x == 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8)
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:07:33) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x == 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:07:54) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:08:07) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:08:33) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:08:43) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:14:02) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- EXECUTION TIME:
0.202976
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:14:24) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x == 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:14:59) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:15:08) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- EXECUTION TIME:
0.185504
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:33:16) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:33:23) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:33:40) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x != 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:38:10) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x <= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:38:33) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:38:45) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:39:19) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:39:32) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:39:38) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 23:39:43) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- EXECUTION TIME:
0.141429
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:39:56) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:40:01) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:40:52) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:54:02) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = factorial(x)
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:54:40) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = factorial(x)
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 23:54:57) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + factorial(x)
	x = x - 1
print(round(s, 8))
	
-- OUTPUT:
5914
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:00:11) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + factorial(x)
	x = x - 1
print(round((s + 1), 8))
	
-- OUTPUT:
5915
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:01:04) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s =factorial(x)
	x = x - 1
print(round((s + 1), 8))
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:01:27) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = factorial(x)
	x = x - 1
print(round((s + 1), 8))
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:01:53) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + factorial(x)
	x = x - 1
print(round((s + 1), 8))
	
-- OUTPUT:
5915
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:02:20) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s + 1), 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:02:47) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:03:21) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
	print(round((s), 8))
	
-- OUTPUT:
0.00019841
0.0015873
0.00992063
0.0515873
0.21825397
0.71825397
1.71825397
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:03:39) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
	print(round((s), 8))
	
-- OUTPUT:
0.00019841
0.0015873
0.00992063
0.0515873
0.21825397
0.71825397
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:03:45) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
	print(round((s), 8))
	
-- OUTPUT:
0.00019841
0.0015873
0.00992063
0.0515873
0.21825397
0.71825397
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 00:04:00) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
	print(round((s), 8))
	
-- EXECUTION TIME:
0.139751
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
0.00019841
0.0015873
0.00992063
0.0515873
0.21825397
0.71825397
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
0.0
0.0
0.0
0.0
3e-08
3e-07
3.06e-06
2.786e-05
0.00022627
0.00161516
0.0099485
0.05161516
0.21828183
0.71828183
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
0.00138889
0.00972222
0.05138889
0.21805556
0.71805556
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 00:04:10) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.157536
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:04:14) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 00:04:32) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 00:04:37) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.175108
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:44:55) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:48:33) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x >= 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:48:45) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:48:49) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x - 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:12:03) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 1

while (x > 0):
	s = s + (1 / factorial(x))
	x = x + 1
print(round((s), 8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:14:01) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s = s + (1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- OUTPUT:
10.81201747
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:14:03) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s = s + (1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.194396
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
10.81201747
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
18.81449524
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
9.79840856
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:14:17) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.154641
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00140111
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0087963
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:14:40) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.157016
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00140111
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0087963
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:15:30) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.126418
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00140111
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0087963
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:15:32) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- OUTPUT:
1.00140111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:15:37) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- OUTPUT:
1.00140111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:15:40) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(1 + s / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- OUTPUT:
1.00140111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:16:16) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(s + 1 / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:16:23) 
-- CODE:
from math import *
x = int(input("valor de x: "))

s = 0
v = 0

while (v<x):
	s =(s + 1 / factorial(v))
	v = v + 1
print(round((s), 8))
	
-- EXECUTION TIME:
0.167191
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
